Fix some spacing and color issues.

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,6 +26,8 @@
     --color-green: hsl(170, 45%, 43%);
     --color-light-green: hsl(170, 63%, 66%);
     --color-shadow-card: hsla(0, 0%, 22%, 0.05);
+    --color-shadow: hsla(0, 0%, 0%, 0.16);
+    --color-very-dark-blue-shadow: hsl(243, 87%, 12%, 0.16);
 }
 
 // Breakpoints
