--- a/sass/components/_forms.scss
+++ b/sass/components/_forms.scss
@@ -58,6 +58,8 @@
         @extend %btn;
 
         font-size: 1.4rem;
+
+        box-shadow: 0.2rem 0.3rem 0.6rem var(--color-shadow);
     }
 
     &--error {
@@ -82,6 +84,10 @@
     grid-template-columns: 24rem;
     grid-template-rows: repeat(2, 3.2rem);
     row-gap: 0.8rem;
+
+    & > * {
+        box-shadow: 0.1rem 0.1rem 0.3rem var(--color-very-dark-blue-shadow);
+    }
 
     &__input {
         @extend %input;
