--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,4 +1,4 @@
 .container {
     max-width: 37.5rem;
-    background-color: bisque;
+    background-color: var(--color-white);
 }
