--- a/sass/layout/_section-cta.scss
+++ b/sass/layout/_section-cta.scss
@@ -1,4 +1,5 @@
 .cta {
+    text-align: center;
     color: var(--color-white);
     background-color: var(--color-desaturated-blue);
 
