--- a/sass/layout/_section-hero.scss
+++ b/sass/layout/_section-hero.scss
@@ -12,7 +12,7 @@
     }
 
     &__heading {
-        margin-bottom: 4rem;
+        margin-bottom: 2.4rem;
     }
 
     &__text {
